<resources>
    <string name="app_name">Menu Inf</string>
    <string name="transition_string">card_transition</string>
    <string name="action_search">Search</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="item_name">Item Name</string>
    <string name="food_name">Food Name</string>
    <string name="spiciness">Spiciness</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_food_items">Add Food Items</string>
    <string name="select_image">Select Image</string>
    <string name="fda">FoodDialogAdd</string>
    <string name="drawer_open">Drawer_Open</string>
    <string name="drawer_close">Drawer_Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="filter_by">Filter By</string>
    <string name="field_error">Field Cannot be empty!!!</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin">zukWguExmKUo6PP10sHmXlykWtE2</string>
    <string name="sign_up">Sign Up</string>
    <string name="conform_password">Conform Password</string>
    <string name="full_name">Full Name</string>
    <string name="error_email">Invalid Email!!</string>
    <string name="pass_not_match">Password Doesn\'t Match!!</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="already_have_an_account">Already have an account? <u>Sign In</u></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="loading">Fetching Data…</string>
</resources>
