<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/foodImageNav"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/selectNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/filter_by"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/foodImageNav"
            app:layout_constraintTop_toBottomOf="@+id/foodImageNav" />

        <TextView
            android:id="@+id/priceNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/price"
            android:textAppearance="@style/NavListText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectNav" />

        <com.innovattic.rangeseekbar.RangeSeekBar
            android:id="@+id/rangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceNav"
            app:rsb_maxThumbDrawable="@drawable/cap"
            app:rsb_maxThumbOffsetHorizontal="12dp"
            app:rsb_minThumbDrawable="@drawable/cap"
            app:rsb_minThumbOffsetHorizontal="-12dp"
            app:rsb_trackColor="#F8BBD0"
            app:rsb_trackSelectedColor="@color/colorAccent" />

        <TextView
            android:id="@+id/minText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/rangeSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/rangeSeekBar" />


        <TextView
            android:id="@+id/maxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/rangeSeekBar"
            app:layout_constraintTop_toTopOf="@+id/minText" />


        <TextView
            android:id="@+id/categoryNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/category"
            android:textAppearance="@style/NavListText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minText" />

        <ListView
            android:id="@+id/categoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryNav"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>